# rust-scalar-string

./: Cargo.toml  README.md
src/: character_validation.rs  lib.rs  regex.rs  sv_string.rs
