[package]
name = "scalar-value-string"
version = "1.0.0"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/matheusdiasdesouzads/rust-scalar-value-string"
license = "ISC"
description = "Scalar Value String"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.5"
once_cell = "1.16.0"